--- a/index.html
+++ b/index.html
@@ -20,9 +20,53 @@
                     <label for="task-title">Title</label>
                     <input type="text" id="task-title" name="title" placeholder="For example, sverstat header" required>
                 </div>
+                <div class="task-form__field">
+                    <label for="task-desc">Description (neobyazatelno)</label>
+                    <textarea name="description" id="task-desc" rows="2" placeholder="a quick description of the task"></textarea>
+                </div>
+                <div class="task-form__field">
+                    <label for="task-status">Kolonka</label>
+                    <select name="status" id="task-status">
+                        <option value="todo" selected>V planah</option>
+                        <option value="in-progress">In progress</option>
+                        <option value="done">Done</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn--primary">Add</button>
             </form>
         </section>
+
+        <!--kanban board-->
+        <section class="board">
+            <div class="column">
+                <header class="column__header">
+                    <h2 class="column__title">Planned</h2>
+                    <span class="column__counter" data-counter="todo">0</span>
+                </header>
+                <div class="column__body" data-status="todo">
+                </div>
+            </div>
+            <div class="column">
+                <header class="column__header">
+                    <h2 class="column__title">In progress</h2>
+                    <span class="column__counter" data-counter="in-progress">0</span>
+                </header>
+                <div class="column__body" data-status="in-progress">
+                </div>
+            </div>
+            <div class="column">
+                <header class="column__header">
+                    <h2 class="column__title">Done</h2>
+                    <span class="column__counter" data-counter="done">0</span>
+                </header>
+                <div class="column__body" data-status="done">
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="app-footer">
+        <span>data is saved in browser (localStorage)</span>
+    </footer>
 
     <script src="script.js"></script>
 </body>
